Completed marked as deleted and checked out operations

--- a/PennState/Views/Home/About.cshtml
+++ b/PennState/Views/Home/About.cshtml
@@ -1,7 +1,16 @@
-﻿@{
-    ViewBag.Title = "About";
-}
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+﻿
+@{
 
-<p>Use this area to provide additional information.</p>
+    ViewBag.Title = "About";
+
+}
+
+<div class="page-init">
+
+    <h2>@ViewBag.Title.</h2>
+
+
+
+    <p>This application allows the physics department at Penn State Harrisburg to track and store information about its assets.</p>
+
+</div>
