--- a/PennState/Views/Home/Contact.cshtml
+++ b/PennState/Views/Home/Contact.cshtml
@@ -1,17 +1,40 @@
-﻿@{
+﻿
+@{
+
     ViewBag.Title = "Contact";
+
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
+<div class="page-init">
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+    <h2>@ViewBag.Title.</h2>
+
+    <h3>@ViewBag.Message</h3>
+
+
+
+    <address>
+
+        126TL Science &amp Tech Bldg<br />
+
+        Penn State Hbg <br />
+
+        Middletown, PA 17057<br />
+
+        <abbr title="Phone">P:</abbr>
+
+        +1 717 948 6113
+
+    </address>
+
+
+
+    <address>
+
+        <strong>Support:</strong>   <a href="mailto:gmg38@psu.edu">gmg38@psu.edu</a><br />
+
+
+
+    </address>
+
+</div>
