--- a/PennState/Views/Item/GetItemList.cshtml
+++ b/PennState/Views/Item/GetItemList.cshtml
@@ -42,52 +42,71 @@
                             <th scope="col" style="font-size:14px">Owner</th>
                             <th scope="col" style="font-size:14px">Added</th>
                             <th scope="col" style="font-size:14px">Updated</th>
-                            <th scope="col" style="font-size:14px">       </th>
+                            <th scope="col" style="font-size:14px">Checked Out</th>
+                            <th scope="col" style="font-size:14px">Marked Deleted</th>
+                            <th scope="col" style="font-size:14px"> </th>
+
                         </tr>
                     </thead>
                     <tbody id="myTableBody">
                         @foreach (var item in ViewBag.ItemList)
                         {
-                            <tr class="table-primary" scope="row" id="row_@item.Id" data-toggle="modal">
-                                <td>
-                                    <a style="font-size:14px" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.ItemName</a>
-                                </td>
-                                <td>
-                                    <a style="font-size:14px" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.Vendor</a>
-                                </td>
-                                <td>
-                                    <a style="font-size:14px" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.AmountInStock</a>
-                                </td>
-                                <td>
-                                    <a style="font-size:14px" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.Location.LocationName</a><br>
-                                    <a style="font-size:14px" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.SubLocation.SubLocationName</a><br>
-                                    @item.LocationComments<br>
-                                </td>
-                                <td>
-                                    <a style="font-size:14px" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.ItemType</a>
-                                </td>
-                                <td><a style="font-size:14px" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.User.FirstName @item.User.LastName</a></td>
-                                <td><a style="font-size:14px" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.Added.ToShortDateString()</a></td>
-                                @if (item.Updated != null)
-                                {
-                                    <td><a style="font-size:14px" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.Updated.ToShortDateString()</a></td>
-                                }
-                                else
-                                {
-                                    <td>        _ </td>
-                                }
-                                <td align="center">
-                                    <a style="font-size:14px" href="#" onclick="itemDetails(@item.Id)" data-toggle="modal"><i class="glyphicon glyphicon-eye-open"></i></a> |
-                                    <a style="font-size:14px" href="#" onclick="editItem(@item.Id);" data-toggle="modal"><i class="glyphicon glyphicon-edit"></i></a> |
-                                    <a style="font-size:14px" href="#" onclick="confirmDelete(@item.Id)"><i class="glyphicon glyphicon-trash"></i></a>
-                                    <br />
-                                    <br />
-                                    @Html.ActionLink("Request", "FlagItem", new { id = item.Id }, new { @style = "margin-left:10px;font-size:14px" })
-                                    <form id="itemId" hidden="hidden">
-                                        @item.Id
-                                    </form>
-                                </td>
-                            </tr>
+                        <tr class="table-primary" scope="row" id="row_@item.Id" data-toggle="modal">
+                            <td>
+                                <a style="font-size:14px" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.ItemName</a>
+                            </td>
+                            <td>
+                                <a style="font-size:14px" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.Vendor</a>
+                            </td>
+                            <td>
+                                <a style="font-size:14px" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.AmountInStock</a>
+                            </td>
+                            <td>
+                                <a style="font-size:14px" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.Location.LocationName</a><br>
+                                <a style="font-size:14px" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.SubLocation.SubLocationName</a><br>
+                                @item.LocationComments<br>
+                            </td>
+                            <td>
+                                <a style="font-size:14px" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.ItemType</a>
+                            </td>
+                            <td><a style="font-size:14px" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.User.FirstName @item.User.LastName</a></td>
+                            <td><a style="font-size:14px" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.Added.ToShortDateString()</a></td>
+                            @if (item.Updated != null)
+                            {
+                                <td><a style="font-size:14px" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.Updated.ToShortDateString()</a></td>
+                            }
+                            else
+                            {
+                                <td>        _ </td>
+                            }
+                            @if (item.CheckedOut == true)
+                            {
+                                <td><input type="checkbox" id="checkCheck" checked style="margin-left:10px" class="linkAnchor" onchange="checkOut(this, @item.Id)" /><span class="checkboxtext">Checked Out</span></td>
+                            }
+                            else
+                            {
+                                <td><input type="checkbox" id="checkCheck2" style="margin-left:10px" class="linkAnchor" onchange="checkOut(this, @item.Id)" /><span class="checkboxtext">Checked Out</span></td>
+                            }
+                            @if (item.MarkedDeleted == true)
+                            {
+                                <td><input type="checkbox" id="markCheck" checked style="margin-left:15px" class="linkAnchor" onclick="markDelete(this, @item.Id)" /><span class="checkboxtext">Mark For Deletion</span></td>
+                            }
+                            else
+                            {
+                                <td><input type="checkbox" id="markCheck2" style="margin-left:15px" class="linkAnchor" onclick="markDelete(this, @item.Id)" /><span class="checkboxtext">Mark For Deletion</span></td>
+                            }
+                            <td align="center">
+                                <a style="font-size:14px" href="#" onclick="itemDetails(@item.Id)" data-toggle="modal"><i class="glyphicon glyphicon-eye-open"></i></a> |
+                                <a style="font-size:14px" href="#" onclick="editItem(@item.Id);" data-toggle="modal"><i class="glyphicon glyphicon-edit"></i></a> |
+                                <a style="font-size:14px" href="#" onclick="confirmDelete(@item.Id)"><i class="glyphicon glyphicon-trash"></i></a>
+                                <br />
+                                <br />
+                                @Html.ActionLink("Request", "FlagItem", new { id = item.Id }, new { @style = "margin-left:10px;font-size:14px" })
+                                <form id="itemId" hidden="hidden">
+                                    @item.Id
+                                </form>
+                            </td>
+                        </tr>
                         }
                     </tbody>
                 </table>
