Added Scheduler, Fixed up requests view page, fixed error when exporting excel file (missing last two items from each catagory)

--- a/PennState/Views/Error/AccessDenied.cshtml
+++ b/PennState/Views/Error/AccessDenied.cshtml
@@ -1,7 +1,4 @@
 ﻿
-@{
-    ViewBag.Title = "AccessDenied";
-}
 
-<h2>AccessDenied</h2>
+<h2 style="color:red;text-align:center">Access Denied</h2>
 
