--- a/PennState/Content/Site.css
+++ b/PennState/Content/Site.css
@@ -24,7 +24,7 @@
         color: dodgerblue;
         display: inline-block;
     }
-
+    
 input[type=checkbox] {
     /* Double-sized Checkboxes */
     -ms-transform: scale(1.25); /* IE */
@@ -247,6 +247,22 @@ tr{
     box-sizing: border-box;
 }
 
+.rightbar {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    top: 62px;
+    width: 380px;
+    height: 100vh;
+    background: #262626;
+    transition: .5s;
+    padding: 20px;
+    text-align: center;
+    align-content: center;
+    align-items: center;
+    box-sizing: border-box;
+}
+
 
 .edit {
     display: inline-block;
@@ -267,6 +283,18 @@ p.thick {
     left:280px;
     background: #FFFFFF;
     height:100%
+}
+
+.requestBox {
+    width: 100%;
+    position: fixed;
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
+    top: 62px;
+    left: 280px;
+    background: #FFFFFF;
+    height: 100%
 }
 
 table tbody, table thead {
