--- a/PennState/Views/Item/GetRequests.cshtml
+++ b/PennState/Views/Item/GetRequests.cshtml
@@ -1,76 +1,121 @@
 ﻿@model PennState.ViewModels.RequestViewModel
+@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+<link rel="stylesheet" href="@Url.Content("~/Scripts/tablesorter/themes/blue/style.css")" />
 
+<div class="page-init">
+    <div id="requestBoxId" class="requestBox">
+        <table id="requestTable" class="table tablesorter table-hover table-striped header-fixed">
+            <thead>
+                <tr>
+                    <th style="font-size:14px">
+                        Item Name
+                    </th>
+                    <th style="font-size:14px">
+                        Quantity
+                    </th>
+                    <th style="font-size:14px">
+                        Unit Price
+                    </th>
+                    <th style="font-size:14px">
+                        Message
+                    </th>
+                    <th style="font-size:14px">
+                        User
+                    </th>
+                    <th style="font-size:14px">
+                        Total Price
+                    </th>
+                    <th style="font-size:14px"></th>
+                </tr>
+            </thead>
+            <tbody>
+                @if (Model.Requests != null)
+                {
+                    foreach (var item in Model.Requests)
+                    {
+                <tr id="rowReq_@item.Id" style="height:50px">
+                    <td style="font-size:14px">
+                        @Html.DisplayFor(modelItem => item.ItemName)
+                    </td>
+                    <td style="font-size:14px">
+                        @Html.DisplayFor(modelItem => item.Quantity)
+                    </td>
+                    <td style="font-size:14px">
+                        @Html.DisplayFor(modelItem => item.UnitPrice)
+                    </td>
+                    <td style="font-size:14px">
+                        @Html.DisplayFor(modelItem => item.Message)
+                    </td>
+                    <td style="font-size:14px">
+                        @Html.DisplayFor(modelItem => item.User.FirstName) @Html.DisplayFor(modelItem => item.User.LastName)
+                    </td>
+                    <td style="font-size:14px">
+                        @Html.DisplayFor(modelItem => item.TotalPrice)
+                    </td>
+                    @if (HttpContext.Current.User.IsInRole("Admin"))
+                    {
+                    <td style="font-size:14px">
+                        <a href="#" onclick="deleteRequest(@item.Id)">Delete</a>
+                    </td>
+                    }
+                    else
+                    {
+                        <td style="font-size:14px">
 
-<h2>Pending Requests</h2>
+                        </td>
+                    }
+                </tr>
+                    }
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            Item Name
-        </th>
-        <th>
-            Quantity
-        </th>
-        <th>
-            Unit Price
-        </th>
-        <th>
-            Message
-        </th>
-        <th>
-            UserId
-        </th>
-        <th>
-            TotalPrice
-        </th>
-        <th></th>
-    </tr>
-    @if (Model.Requests != null)
-    {
-        foreach (var item in Model.Requests)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ItemName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Quantity)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.UnitPrice)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Message)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.UserId)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.TotalPrice)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                </td>
-            </tr>
+                }
+                else
+                {
+                    if (TempData["SM"] != null)
+                    {
+                        <tr>
+                            <th>
+                                <div class="alert alert-primary">
+                                    @TempData["SM"]
+                                </div>
+                            </th>
+                        </tr>
+                    }
+                }
+            </tbody>
+        </table>
+    </div>
+    <div class="parent-sidebar">
+        <div class="sidebar">
+        </div>
+    </div>
+    <div class="parent-sidebar">
+        <div class="rightbar">
+        </div>
+    </div>
+</div>
+        @section Scripts{
+            <script src="~/Scripts/tablesorter/jquery.tablesorter.min.js"></script>
+            <script>
+                $(document).ready(function () {
+                    $("#requestTable").tablesorter({ sortList: [[0, 0], [2, 1]] });
+                });
+
+                function deleteRequest(id) {
+                    $.ajax({
+                        url: "/Item/DeleteRequest/" + id,
+                        async: false,
+                        beforeSend: function() {
+                            return confirm("Are you sure you want to delete this request?");
+                        }
+                    }).done(function (data) {
+                        $("#rowReq_" + id).remove();
+                        $.notify("Request Deleted", {
+                            style: 'happygreen'
+                        });
+                    })
+
+                }
+            </script>
         }
-
-    }
-    else
-    {
-        if (TempData["SM"] != null)
-        {
-            <tr>
-                <th>
-                    <div class="alert alert-primary">
-                        @TempData["SM"]
-                    </div>                   
-                </th>
-            </tr>
-        }
-    }
-</table>
