--- a/PennState/Views/Shared/_Layout.cshtml
+++ b/PennState/Views/Shared/_Layout.cshtml
@@ -39,6 +39,13 @@
 <script src="~/Scripts/notify.js"></script>
 <script type="text/javascript">   
 
+    function notAllowed() {
+        $.notify("You do not have permissions to invite users.", {
+            style: 'dangerred'
+        });
+        return false;
+    }
+
     //Search for query string
     $(document).ready(function () {
         $('#my_form').on('keydown', function (e) {
@@ -195,10 +202,21 @@
                                 style: 'happygreen'
                             });
                         }
-                        else {
+                        else if (data == "null") {
                             event.checked = false;
                             $.notify("You have unmarked this item for deletion.", {
                                 style: 'happygreen'
+                            });
+                        }
+                        else {
+                            if (event.checked == false) {
+                                event.checked = true;
+                            }
+                            else {
+                                event.checked = false;
+                            }
+                            $.notify("You do not have permission to mark this item for deletion.", {
+                                style: 'dangerred'
                             });
                         }
                     }
@@ -327,11 +345,19 @@
                 return confirm("Are you sure you want to delete this item?");
             }
         }).done(function (data) {
-            $("#delModal").hide();
-            $("#row_" + itemid).remove();
-            $.notify("Item Deleted", {
-                style: 'happygreen'
-            });
+            if (data == true) {
+                $("#delModal").hide();
+                $("#row_" + itemid).remove();
+                $.notify("Item Deleted", {
+                    style: 'happygreen'
+                });
+            }
+            else {
+                $.notify("You do not have permission to delete any items.", {
+                    style: 'dangerred'
+                });
+            }
+            
         });
     }
 
