--- a/PennState/Views/Shared/_NavBar.cshtml
+++ b/PennState/Views/Shared/_NavBar.cshtml
@@ -52,7 +52,7 @@
             else
             {
                 <li class="nav-item">
-                    <a href="#" class="nav-link" onclick="logIn()" data-target="#logInModal" style="margin-left:20px" data-toggle="modal">Login</a>
+                    <a href="#" class="nav-link" onclick="logIn(null)" data-target="#logInModal" style="margin-left:20px" data-toggle="modal">Login</a>
                 </li>
 
             }
