--- a/PennState/Views/Shared/_NavBar.cshtml
+++ b/PennState/Views/Shared/_NavBar.cshtml
@@ -9,50 +9,50 @@
                 @Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })
             </li>
             <li class="nav-item">
-                @Html.ActionLink("About", "About", "Home", new { area = "" }, new { @class = "nav-link", @style = "margin-left:20px" })
+                @Html.ActionLink("About", "About", "Home", new { area = "" }, new { @class = "nav-link" })
             </li>
             <li class="nav-item">
-                @Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "nav-link", @style = "margin-left:20px" })
+                @Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })
             </li>
             @if (HttpContext.Current.User.Identity.IsAuthenticated)
             {
                 if (HttpContext.Current.User.IsInRole("Admin"))
                 {
                     <li class="nav-item">
-                        @Html.ActionLink("Invite", "AddUser", "Account", new { area = "" }, new { @class = "nav-link", @style = "margin-left:20px" })
+                        @Html.ActionLink("Invite", "AddUser", "Account", new { area = "" }, new { @class = "nav-link" })
                     </li>
                 }
                 else
                 {
                     <li class="nav-item">
-                        <a href="#" class = "nav-link" style="margin-left:20px;color:red" onclick = "notAllowed()">Invite</a>
+                        <a href="#" class = "nav-link" style="color:red" onclick = "notAllowed()">Invite</a>
                     </li>
                 }
                 <li class="nav-item">
-                    @Html.ActionLink("Inventory", "GetAllItems", "Item", new { area = "" }, new { @class = "nav-link", @style = "margin-left:20px" })
+                    @Html.ActionLink("Inventory", "GetAllItems", "Item", new { area = "" }, new { @class = "nav-link" })
                 </li>
                 <li class="nav-item">
-                    @Html.ActionLink("New Request", "FlagItem", "Item", new { area = "" }, new { @class = "nav-link", @style = "overflow:hidden;white-space:nowrap;margin-left:20px" })
+                    @Html.ActionLink("New Request", "FlagItem", "Item", new { area = "" }, new { @class = "nav-link", @style = "overflow:hidden;white-space:nowrap" })
                 </li>
                 <li class="nav-item">
-                    @Html.ActionLink("Requests", "GetRequests", "Item", new { area = "" }, new { @class = "nav-link", @style = "overflow:hidden;white-space:nowrap;margin-left:20px" })
+                    @Html.ActionLink("Requests", "GetRequests", "Item", new { area = "" }, new { @class = "nav-link", @style = "overflow:hidden;white-space:nowrap" })
                 </li>
                 <li class="nav-item">
-                    @Html.ActionLink("Schedule", "Scheduler", "Item", new { area = "" }, new { @class = "nav-link", @style = "overflow:hidden;white-space:nowrap;margin-left:20px" })
+                    @Html.ActionLink("Schedule", "Scheduler", "Item", new { area = "" }, new { @class = "nav-link", @style = "overflow:hidden;white-space:nowrap" })
                 </li>
-                <li class="nav-item" style="float:right">
-                    @Html.ActionLink("Log out", "LogOut", "Account", new { area = "" }, new { @class = "nav-link", @style = "overflow:hidden;white-space:nowrap;margin-left:600px" })
+                <li class="nav-item" style="right:0%">
+                    @Html.ActionLink("Log out", "LogOut", "Account", new { area = "" }, new { @class = "nav-link", @style = "overflow:hidden;white-space:nowrap" })
                 </li>
                 var identity = ((CustomPrincipal)HttpContext.Current.User);
                 <li class="nav-item">
-                    @Html.ActionLink(" Welcome " + identity.FirstName + "!", "", "", new { area = "" }, new { @class = "nav-link disabled", @style = "overflow:hidden;white-space:nowrap;margin-left:20px" })
+                    @Html.ActionLink(" Welcome " + identity.FirstName + "!", "", "", new { area = "" }, new { @class = "nav-link disabled", @style = "overflow:hidden;white-space:nowrap" })
                 </li>
 
             }
             else
             {
                 <li class="nav-item">
-                    <a href="#" class="nav-link" onclick="logIn(null)" data-target="#logInModal" style="margin-left:20px" data-toggle="modal">Login</a>
+                    <a href="#" class="nav-link" onclick="logIn(null)" data-target="#logInModal" data-toggle="modal">Login</a>
                 </li>
 
             }
