--- a/PennState/Content/bootstrap-cosmo.css
+++ b/PennState/Content/bootstrap-cosmo.css
@@ -1671,7 +1671,7 @@ pre code {
     margin-bottom: 1rem;
     color: #373a3c;
     height: 100%;
-    bottom: 0px;
+    bottom: 0%;
 }
 
 tr:after {
@@ -1685,21 +1685,24 @@ tr:after {
     padding: 0.75rem;
     vertical-align: top;
     border-top: 1px solid #dee2e6;
-    width: 180px;
 }
 
 .table thead th {
   vertical-align: bottom;
   border-bottom: 2px solid #dee2e6;
+  width:inherit;
 }
 
 .table tbody + tbody {
     border-top: 2px solid #dee2e6;
 }
 
+/*tbody tr{
+    width:3%
+}*/
+
 tbody {
     height: 100%;
-    top: 100px;
 }
 
 .table-sm th,
@@ -1739,20 +1742,22 @@ tbody {
   height: 100%;
 }
 
-.table-primary,
 .table-primary > th,
+.table-primary,
+.table-primary > tr,
 .table-primary > td {
-  background-color: #c3dbf7;
-  width: 180px;
-  bottom: 0px;
+    background-color: #c3dbf7;
+    width: 8.5%;
+    bottom: 0%;
 }
-
-.table-primary th,
-.table-primary td,
-.table-primary thead th,
-.table-primary tbody + tbody {
-  border-color: #8fbdf0;
-}
+    .table-primary th
+    .table-primary td,
+    .table-primary tr,
+    .table-primary thead th,
+    .table-primary tbody + tbody {
+        border-color: #8fbdf0;
+        width: inherit;
+    }
 
 .table-hover .table-primary:hover {
   background-color: #adcef4;
@@ -1775,6 +1780,7 @@ tbody {
 .table-secondary tbody + tbody {
   border-color: #97999a;
 }
+
 
 .table-hover .table-secondary:hover {
   background-color: #babbbb;
