--- a/PennState/Views/Item/GetRequests.cshtml
+++ b/PennState/Views/Item/GetRequests.cshtml
@@ -6,7 +6,7 @@
 
 <div class="page-init">
     <div id="requestBoxId" class="requestBox">
-        <table id="requestTable" class="table tablesorter table-hover table-striped header-fixed">
+        <table id="requestTable" class="tablesorter table-hover table-striped">
             <thead>
                 <tr>
                     <th style="font-size:14px">
