--- a/PennState/Views/Item/GetItemList.cshtml
+++ b/PennState/Views/Item/GetItemList.cshtml
@@ -21,59 +21,58 @@
     <div class="page-init">
         <div id="listBoxId" class="listBox">
             <div id="theTable" style="height:100%">
-                <table id="myTable" class="table tablesorter table-hover table-striped header-fixed ">
+                <table id="myTable" class="tablesorter table-hover table-striped">
                     <thead>
                         <tr>
-                            <th scope="col" style="font-size:14px">
+                            <th scope="col" style="font-size:134%;width:18%">
                                 Name
                             </th>
-                            <th scope="col" style="font-size:14px">
+                            <th scope="col" style="font-size:134%;width:11%">
                                 Vendor
                             </th>
-                            <th scope="col" style="font-size:14px">
+                            <th scope="col" style="font-size:134%;width:4.6%">
                                 Amount
                             </th>
-                            <th scope="col" style="font-size:14px">
+                            <th scope="col" style="font-size:134%;width:13.6%">
                                 Location
                             </th>
-                            <th scope="col" style="font-size:14px">
+                            <th scope="col" style="font-size:134%;width:11%">
                                 Type
                             </th>
-                            <th scope="col" style="font-size:14px">Owner</th>
-                            <th scope="col" style="font-size:14px">Added</th>
-                            <th scope="col" style="font-size:14px">Updated</th>
-                            <th scope="col" style="font-size:14px">Checked Out</th>
-                            <th scope="col" style="font-size:14px">Marked Deleted</th>
-                            <th scope="col" style="font-size:14px"> </th>
+                            <th scope="col" style="font-size:134%;width:7.2%">Owner</th>
+                            <th scope="col" style="font-size:134%;width:6%">Added</th>
+                            <th scope="col" style="font-size:134%;width:7%">Updated</th>
+                            <th scope="col" style="font-size:134%;width:1%">Checked Out&nbsp; &nbsp; &nbsp;</th>
+                            <th class="extend" scope="col" style="font-size:135%;width:15%">Marked Delete</th>
 
                         </tr>
                     </thead>
                     <tbody id="myTableBody">
                         @foreach (var item in ViewBag.ItemList)
                         {
-                        <tr class="table-primary" scope="row" id="row_@item.Id" data-toggle="modal">
+                        <tr class="table-primary wi" scope="row" id="row_@item.Id" data-toggle="modal">
                             <td>
-                                <a style="font-size:14px" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.ItemName</a>
+                                <a style="font-size:135%" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.ItemName</a>
                             </td>
                             <td>
-                                <a style="font-size:14px" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.Vendor</a>
+                                <a style="font-size:135%" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.Vendor</a>
                             </td>
                             <td>
-                                <a style="font-size:14px" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.AmountInStock</a>
+                                <a style="font-size:135%" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.AmountInStock</a>
                             </td>
                             <td>
-                                <a style="font-size:14px" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.Location.LocationName</a><br>
-                                <a style="font-size:14px" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.SubLocation.SubLocationName</a><br>
+                                <a style="font-size:135%" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.Location.LocationName</a><br>
+                                <a style="font-size:135%" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.SubLocation.SubLocationName</a><br>
                                 @item.LocationComments<br>
                             </td>
                             <td>
-                                <a style="font-size:14px" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.ItemType</a>
+                                <a style="font-size:135%" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.ItemType</a>
                             </td>
-                            <td><a style="font-size:14px" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.User.FirstName @item.User.LastName</a></td>
-                            <td><a style="font-size:14px" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.Added.ToShortDateString()</a></td>
+                            <td><a style="font-size:135%" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.User.FirstName @item.User.LastName</a></td>
+                            <td><a style="font-size:135%" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.Added.ToShortDateString()</a></td>
                             @if (item.Updated != null)
                             {
-                                <td><a style="font-size:14px" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.Updated.ToShortDateString()</a></td>
+                                <td><a style="font-size:135%" class="linkAnchor" href="#" onclick="editItem(@item.Id)">@item.Updated.ToShortDateString()</a></td>
                             }
                             else
                             {
@@ -81,24 +80,24 @@
                             }
                             @if (item.CheckedOut == true)
                             {
-                                <td><input type="checkbox" id="checkCheck" checked style="margin-left:10px" class="linkAnchor" onchange="checkOut(this, @item.Id)" /><span class="checkboxtext">Checked Out</span></td>
+                                <td><input type="checkbox" id="checkCheck" checked style="margin-left:6%" class="linkAnchor" onchange="checkOut(this, @item.Id)" /><span class="checkboxtext">Checked Out</span></td>
                             }
                             else
                             {
-                                <td><input type="checkbox" id="checkCheck2" style="margin-left:10px" class="linkAnchor" onchange="checkOut(this, @item.Id)" /><span class="checkboxtext">Checked Out</span></td>
+                                <td><input type="checkbox" id="checkCheck2" style="margin-left:6%" class="linkAnchor" onchange="checkOut(this, @item.Id)" /><span class="checkboxtext">Checked Out</span></td>
                             }
                             @if (item.MarkedDeleted == true)
                             {
-                                <td><input type="checkbox" id="markCheck" checked style="margin-left:15px" class="linkAnchor" onclick="markDelete(this, @item.Id)" /><span class="checkboxtext">Mark For Deletion</span></td>
+                                <td><input type="checkbox" id="markCheck" checked style="margin-left:6%" class="linkAnchor" onclick="markDelete(this, @item.Id)" /><span class="checkboxtext">Mark For Deletion</span></td>
                             }
                             else
                             {
-                                <td><input type="checkbox" id="markCheck2" style="margin-left:15px" class="linkAnchor" onclick="markDelete(this, @item.Id)" /><span class="checkboxtext">Mark For Deletion</span></td>
+                                <td><input type="checkbox" id="markCheck2" style="margin-left:6%" class="linkAnchor" onclick="markDelete(this, @item.Id)" /><span class="checkboxtext">Mark For Deletion</span></td>
                             }
                             <td align="center">
-                                <a style="font-size:14px" href="#" onclick="itemDetails(@item.Id)" data-toggle="modal"><i class="glyphicon glyphicon-eye-open"></i></a> |
-                                <a style="font-size:14px" href="#" onclick="editItem(@item.Id);" data-toggle="modal"><i class="glyphicon glyphicon-edit"></i></a> |
-                                <a style="font-size:14px" href="#" onclick="confirmDelete(@item.Id)"><i class="glyphicon glyphicon-trash"></i></a>
+                                <a style="font-size:135%" href="#" onclick="itemDetails(@item.Id)" data-toggle="modal"><i class="glyphicon glyphicon-eye-open"></i></a> |
+                                <a style="font-size:135%" href="#" onclick="editItem(@item.Id);" data-toggle="modal"><i class="glyphicon glyphicon-edit"></i></a> |
+                                <a style="font-size:135%" href="#" onclick="confirmDelete(@item.Id)"><i class="glyphicon glyphicon-trash"></i></a>
                                 <br />
                                 <br />
                                 @Html.ActionLink("Request", "FlagItem", new { id = item.Id }, new { @style = "margin-left:10px;font-size:14px" })
@@ -116,7 +115,7 @@
 
     <div tabindex="-1" class="sideModal" role="dialog" id="myModal" data-backdrop="false">
         <div class="modal-content2" id="editContent">
-            <div style="bottom:20px">
+            <div style="bottom:10%">
                 <div class="modal-header">
                     <h3 class="modal-title">Edit Item</h3>
                 </div>
@@ -128,7 +127,7 @@
     </div>
 
     <div tabindex="-1" class="createModal" data-dismiss="modal" role="dialog" id="myModal2" data-backdrop="false">
-        <div style="bottom:20px">
+        <div style="bottom:10%">
             <div class="modal-header">
                 <h3 class="modal-title" style="text-align:left">Add Item In Physics Inventory</h3>
             </div>
